objects/LLC_BI__Scorecard_Detail__c.object
<CustomObject>
    <description>The object stores detailed elements that was used in the creation of the decision associated with the scorecard.</description>
    <fields>
        <fullName>LLC_BI__Assigned_Points__c</fullName>
        <description>This field is used to capture the number of points assigned to the evaluation. This will be displayed to the user if the financial institution is utilizing points when evaluating criteria on the loan.  It is automatically populated based on the points accumulated and configured through the Visual Flow Logic.</description>
        <label>Assigned Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Points__c</fullName>
        <description>This field is used to display the maximum number of points that can be assigned to the criteria being evaluated. It is displayed in the key scoring criteria section of the scorecard if the financial institution is utilizing points when evaluating loans. It is populated automatically when a score card is generated and is configurable through the Visual Flow logic, where a financial institution can adjust the values and decide whether or not they want to use points.</description>
        <label>Maximum Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Result__c</fullName>
        <description>This field is optional and automatically populated on the scorecard if the logic is configured to use a pass/fail result. This field displays the result of the particular piece of criteria being evaluated in the decision.</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Scorecard__c</fullName>
        <description>This field is a reference field that links the scorecard details to the appropriate score card. The field is not visible to users but is used behind the scenes to link the details with the scorecard they belong to. This field is automatically populated when a scorecard is generated</description>
        <label>Scorecard</label>
        <referenceTo>LLC_BI__Scorecard__c</referenceTo>
        <relationshipLabel>Scorecard Details</relationshipLabel>
        <relationshipName>Scorecard_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>This field is used to store the value that was used during the specific evaluation of the criteria that was performed. This value is shown on the scorecard in the key scoring criteria section of the decision overview; this field specifies the value of that criteria received during evaluation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Scorecard Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Scorecard Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>